table_3/results/Table-wrapper-api_post_nullaway_ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_api-ann-post/src/src/main/java/org/spacious_team/table_wrapper/api/MutableTableRow.java:39: error: [NullAway] initializer method does not guarantee @NonNull field row (line 45) is initialized along all control-flow paths (remember to check for exceptions or early returns).
@Data
^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 806ms
0
